task: Scrollbar issue Fix

--- a/src/app/routes/home-page/products-by-brand/products-by-brand.component.css
+++ b/src/app/routes/home-page/products-by-brand/products-by-brand.component.css
@@ -9,7 +9,9 @@
     row-gap: 1em;
     overflow: scroll;
 }
-
+::-webkit-scrollbar {
+    display: none;
+}
 .card-container{
     display: flex;
     flex-grow: 1;
