--- a/src/app/routes/home-page/products-by-category/products-by-category.component.css
+++ b/src/app/routes/home-page/products-by-category/products-by-category.component.css
@@ -10,6 +10,10 @@
     overflow: scroll;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 .card-container{
     display: flex;
     flex-grow: 1;
